deployment/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-10-02T20:52:14Z"
  labels:
    app: demo
  name: demo-np
  namespace: default
  resourceVersion: "3066"
  uid: 097bf578-1162-45f9-ae2f-211f1736518e
spec:
  clusterIP: 10.101.134.172
  clusterIPs:
  - 10.101.134.172
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32302
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
